[metadata]
license_file = LICENSE

[tool:pytest]
python_files=tests.py test_*.py *_tests.py
#isort_ignore=

[isort]
line_length=120
indent='    '
not_skip=__init__.py
skip=setup.py
multi_line_output=3
include_trailing_comma=true
known_first_party=dexcom,tests
known_third_party=elasticsearch
default_section=FIRSTPARTY
sections=FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[flake8]
max-line-length=120
ignore=E722
